Fixed extra spaces

--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ section h3 .title{
 
 @media (max-width: 800px){
     .header{
-        min-height: 600vh;
+        min-height: 100vh;
     }
     .header h1{
         font-size: 48px;
